<resources>
    <string name="g_label_share">share</string>
    <string name="g_label_app_name">Gifteng</string>
    <string name="g_label_continue">CONTINUE</string>
    <string name="g_label_use_gifteng_for">What will you use Gifteng for?</string>
    <string name="g_label_giving">Giving</string>
    <string name="g_label_receiving">Receiving</string>
    <string name="g_label_confirm_req">CONFIRM REQUEST</string>
    <string name="g_label_verify_invitation">VERIFY INVITATION</string>
    <string name="g_label_password">Password</string>
    <string name="g_label_forgot_password">Forgot Password</string>
    <string name="g_label_remember">Remember me</string>
    <string name="g_label_login">LOG IN</string>
    <string name="g_label_reset_password">RESET PASSWORD</string>
    <string name="g_label_request_invitation">REQUEST AN INVITATION</string>
    <string name="g_label_have_invitation">I have an invitation</string>
    <string name="g_label_invitation">Invitation</string>
    <string name="g_label_log_in">Log in</string>
    <string name="g_label_join">JOIN</string>
    <string name="g_label_postlisting_notes">Notes</string>
    <string name="g_label_postlisting_details">Details</string>
    <string name="g_label_postlisting_next">Next</string>
    <string name="g_label_free_shipping">Free Shipping</string>
    <string name="g_label_pick_up">Pick Up</string>
    <string name="g_label_edit">Edit</string>
    <string name="g_label_save">Save</string>
    <string name="g_label_basic_info">Personal Info :</string>
    <string name="g_label_contact_info">Contact Info :</string>
    <string name="g_label_male">Male</string>
    <string name="g_label_female">Female</string>
    <string name="g_label_gender">Gender :</string>
    <string name="g_label_change_picture">Change Picture</string>
    <string name="g_label_change_password">Change Password</string>
    <string name="g_label_days"> days</string>
    <string name="g_label_following">Following</string>
    <string name="g_label_followers">Followers</string>
    <string name="g_label_reviews">Reviews</string>
    <string name="g_label_review_by">Review by</string>
    <string name="g_label_cancel_request">CANCEL REQUEST</string>
    <string name="g_label_choose_email">Choose an Email client</string>
    <string name="g_label_unfollow">Unfollow</string>
    <string name="g_label_mark_received">MARK RECEIVED</string>
    <string name="g_label_leave_review">LEAVE REVIEW</string>
    <string name="g_label_send_msg">SEND MESSAGE</string>
    <string name="g_label_like">Like</string>
    <string name="g_label_dislike">Dislike</string>
    <string name="g_label_from_members">Gift from Members</string>
	<string name="g_label_from_business">FROM BUSINESSES</string>
    <string name="g_label_save_settings">Save Settings</string>
	<string name="g_label_miles">mi</string>
	<string name="g_label_requerst_gift">Request Gift</string>
	<string name="g_label_expiars">Expires:</string>
	<string name="g_label_from_member">FROM MEMBERS</string>
    <string name="g_hint_enter_email_phone">Email Address or Phone #</string>
    <string name="g_hint_zip">Your Zip Code</string>
    <string name="g_hint_how_know_us">How did you here out about us?</string>
    <string name="g_hint_invitation_code">Enter Your Invitation Code</string>
    <string name="g_hint_new_password">New Password</string>
    <string name="g_hint_conf_password">Confirm Password</string>
    <string name="g_hint_password">Password</string>
    <string name="g_hint_email">Email</string>
    <string name="g_hint_fname">First Name</string>
    <string name="g_hint_lname">Last Name</string>
    <string name="g_hint_postlisting_current_value">Current value</string>
    <string name="g_hint_choose_category">Choose Category</string>
    <string name="g_hint_current_location">My Loaction</string>
    <string name="g_hint_code">Code</string>
    <string name="g_msg_about">Gifteng is an invitation-only social community where Members can give and receive things they love for free.</string>
    <string name="g_msg_login_title_msg">- make the world a giving place -</string>
    <string name="g_msg_password_reset">Please enter your email address so we can lookup your account</string>
    <string name="g_msg_password_reset_validation">At least 6 characters with letters and numbers</string>
    <string name="g_msg_terms">By joining , you agree to our Terms of Use and Privacy policy.</string>
    <string name="g_msg_inv_req_success">Thank you for your request, we will contact you soon!</string>
    <string name="g_msg_congrats">Congratulation!</string>
    <string name="g_msg_select_source">Please select source of information.</string>
    <string name="g_msg_pwd_not_match">does not match</string>
    <string name="g_msg_change_pwd_success">Password changed successfully.</string>
    <string name="g_msg_listing_update_terms_conditions">If you edit this gift you agree that we need to approve it again before it goes back live.</string>
    <string name="g_msg_validation_price">Please enter valid price value e.g. $10.</string>
    <string name="g_msg_follow_success">User added to following list.</string>
    <string name="g_msg_unfollow_success">User removed from following list.</string>
    <string name="g_msg_mark_spam_conf">Are you sure you want to mark it as spam?</string>
    <string name="g_msg_unmark_spam_conf">Are you sure you want to revoke spam mark?</string>
    <string name="g_msg_mark_spam_success">Listing marked as spam.</string>
    <string name="g_msg_unmark_spam_success">Spam marked removed successfully.</string>
    <string name="g_msg_request_ad_success">Gift request placed successfully.</string>
    <string name="g_msg_cancel_request_ad_success">Gift request cancelled.</string>
    <string name="g_msg_request_placed_already">You have already placed request for this gift.</string>
    <string name="g_msg_reset_pwd_success">Password changed successfully.</string>
    <string name="g_msg_already_in_bookmark">Gift already in favourites.</string>
	<string name="g_msg_msrk_received_success">Gift maked as received.</string>
	<string name="g_msg_no_data_for_members">No receivings from members.</string>
	<string name="g_msg_no_data_for_business">No receivings from businesses.</string>
    <string name="g_error_invtation_code">Sorry, your Invitation Code is not correct</string>
    <string name="g_error_req_invtation_code">Faild to request invitation. Please try again later.</string>
    <string name="g_error_change_pwd">Unable to change password. Please try again later.</string>
    <string name="g_error_invalid_old_pwd">Unable to change password. Old Password is not valid.</string>
    <string name="g_error">Unable to process request. Please try again later.</string>
    <string name="g_error_ad_no_more_available">Requested gift no more available.</string>
    <string name="g_error_reset_pwd_invalid_code">Reset password failed. Invalid code.</string>
    <string name="g_error_reset_pwd_code_expired">Reset password failed. Code expired.</string>
    <string name="g_error_reset_pwd_used_code">Reset password failed. Code already used.</string>
    <string name="g_error_no_requests">You have no receivings.</string>
    <string name="g_facebook_share">https://www.facebook.com/gifteng</string>
    <string name="g_twitter_share">https://twitter.com/gifteng</string>
    <string name="g_geftang_url">https://www.gifteng.com</string>
    <string-array name="g_array_purpose_of_registration">
        <item>How did you here out about us?</item>
        <item>Google</item>
        <item>Facebook</item>
        <item>Twitter</item>
        <item>From A Friend</item>
        <item>Other</item>
    </string-array>
    <string name="label_act_login_welcome">Don\'t have a Venefica ID?</string>
    <string name="label_act_login_btn_sign_up">Register</string>
    <string name="label_act_login_btn_sign_in">Login</string>
    <string name="label_act_login_sign_in_with">Sign In With</string>
    <string name="label_act_register_user_title">Join the community!</string>
    <string name="label_act_reg_user_btn_join">Join</string>
    <string name="label_act_reg_user_btn_option_phone">Use phone number</string>
    <string name="label_act_reg_user_btn_option_email">Use E-mail</string>
    <string name="label_act_reg_user_inv_code">invitation code</string>
    <string name="label_act_reg_user_verify">Verify</string>
    <string name="label_act_reg_user_req_inv_code">Request invitation</string>
    <string name="label_act_reg_user_inv_title">I have an invitation</string>
    <string name="label_act_reg_user_req_inv_title">Request an invitation</string>
    <string name="label_act_reg_user_complete_profile">Your profile is incomplete, please fill missing fields.</string>
    <string name="label_act_login_or">or</string>
    <string name="label_act_login_forgot_pass">Forgot password</string>
    <string name="label_act_login_forgot_inv_code">Lost Invitation</string>
    <string name="label_act_login_req_pass">Request password</string>
    <string name="label_login">Email / Phone</string>
    <string name="label_connect_with">Connect with</string>
    <string name="label_password">Password</string>
    <string name="label_email">E-mail</string>
    <string name="label_phone">Phone</string>
    <string name="label_f_name">First Name</string>
    <string name="label_l_name">Last Name</string>
    <string name="label_birth">Date of Birth</string>
    <string name="label_zip">Zip Code</string>
    <string name="label_addr1">Address 1</string>
    <string name="label_addr2">Address 2</string>
    <string name="label_county">County</string>
    <string name="label_country">Country</string>
    <string name="label_city">City</string>
    <string name="label_area">Area</string>
    <string name="label_state">State</string>
    <string name="label_business_acc">Business Account</string>
    <string name="label_remember_me">Remember me</string>
    <string name="label_profile_image">Profile Image</string>
    <string name="label_dashboard_invite">Invite Friends</string>
    <string name="label_dashboard_messages">Messages</string>
    <string name="label_dashboard_browse">Browse</string>
    <string name="label_dashboard_post">Post a Gift</string>
    <string name="label_dashboard_selling">Giving</string>
    <string name="label_dashboard_buying">Receiving</string>
    <string name="label_dashboard_watching">Favourited</string>
    <string name="label_dashboard_account">Account</string>
    <string name="label_dashboard_reviews">Reviews</string>
    <string name="label_dashboard_settings">Notification</string>
    <string name="label_dashboard_signout">Sign Out</string>
    <string name="label_btn_ok">OK</string>
    <string name="label_btn_yes">Yes</string>
    <string name="label_btn_no">No</string>
    <string name="label_btn_save">Save</string>
    <string name="label_btn_cancel">Cancel</string>
    <string name="label_messages">Messages</string>
    <string name="label_postlisting_title">Enter details below</string>
    <string name="label_postlisting_listing_title">Title</string>
    <string name="label_postlisting_category">Category</string>
    <string name="label_postlisting_sel_category">Select a category</string>
    <string name="label_postlisting_description">Description</string>
    <string name="label_postlisting_price">Price</string>
    <string name="label_postlisting_latitude">Latitude</string>
    <string name="label_postlisting_longitude">Longitude</string>
    <string name="label_postlisting_post">Post</string>
    <string name="label_menu_relist">Relist</string>
    <string name="label_menu_update">Update</string>
    <string name="label_menu_end">End</string>
    <string name="label_menu_delete">Delete</string>
    <string name="label_share">share</string>
    <string name="google_map_api_key">0ElieL9os3erYMNcR9jThm1lsWL7xw-RD0IbkGQ</string>
</resources>