<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
        android:id="@+id/slideMenuBrowse"
        android:icon="@drawable/icon_search"
        android:title="@string/label_dashboard_browse"/>
    <item
        android:id="@+id/slideMenuPost"
        android:icon="@drawable/icon_send"
        android:title="@string/label_dashboard_post"/>
    <item
        android:id="@+id/slideMenuSelling"
        android:icon="@drawable/icon_list_2"
        android:title="@string/label_dashboard_selling"/>
    <item
        android:id="@+id/slideMenuBuying"
        android:icon="@drawable/icon_tags"
        android:title="@string/label_dashboard_buying"/>
    <item
        android:id="@+id/slideMenuWatching"
        android:icon="@drawable/icon_show"
        android:title="@string/label_dashboard_watching"/>
    <item
        android:id="@+id/slideMenuMessages"
        android:icon="@drawable/icon_mail"
        android:title="@string/label_dashboard_messages"/>
    <!-- <item
        android:id="@+id/slideMenuReviews"
        android:icon="@drawable/icon_like"
        android:title="@string/label_dashboard_reviews"/>
    <item
        android:id="@+id/slideMenuInviteFriends"
        android:icon="@drawable/icon_users"
        android:title="@string/label_dashboard_invite"/>
	<item
        android:id="@+id/slideMenuAccount"
        android:icon="@drawable/icon_creditcard"
        android:title="@string/label_dashboard_account"/> -->
	<item
        android:id="@+id/slideMenuSettings"
        android:icon="@drawable/icon_settings"
        android:title="@string/label_dashboard_settings"/>
	<item
        android:id="@+id/slideMenuSignOut"
        android:icon="@drawable/icon_exit"
        android:title="@string/label_dashboard_signout"/>
</menu>