<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone" >

    <ScrollView
        style="?ActivityBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingBottom="6dp"
            android:paddingTop="?actionBarSize" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_postlisting_title" />
            <!-- Divider line -->

            <TextView
                android:id="@+id/divPost01"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#DADADA" />

            <!-- Title -->

            <TextView
                android:id="@+id/txtActPostListingListTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_postlisting_listing_title" />

            <EditText
                android:id="@+id/edtActPostListingListTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_postlisting_listing_title"
                android:inputType="text" />

            <!-- Description -->

            <TextView
                android:id="@+id/txtActPostListingDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_postlisting_description" />

            <EditText
                android:id="@+id/edtActPostListingDescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/label_postlisting_description"
                android:inputType="textMultiLine" />

            <!-- Category -->

            <TextView
                android:id="@+id/txtActPostListingCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/label_postlisting_category" />

            <!-- <EditText
                android:id="@+id/btnActPostListingCategory"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_postlisting_sel_category" /> -->
             <Button
                android:id="@+id/btnActPostListingCategory"
                style="@style/ButtonFullWidthLightGray"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_postlisting_sel_category" />

            <!-- Price -->

            <TextView
                android:id="@+id/txtActPostListingPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_postlisting_price" />

            <EditText
                android:id="@+id/edtActPostListingPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/label_postlisting_price"
                android:inputType="numberDecimal" />
            <!-- Expiary -->

            <!-- <Button
                android:id="@+id/btnActPostListingAddExpiary"
                style="@style/ButtonFullWidthLightGray"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" /> -->

            <!-- Latitude -->

            <TextView
                android:id="@+id/txtActPostListingLatitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_postlisting_latitude" />

            <EditText
                android:id="@+id/edtActPostListingLatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_postlisting_latitude"
                android:inputType="none" />
            <!-- Longitude -->

            <TextView
                android:id="@+id/txtActPostListingLongitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_postlisting_longitude" />

            <EditText
                android:id="@+id/edtActPostListingLongitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_postlisting_longitude"
                android:inputType="none" />

            <Button
                android:id="@+id/btnActPostListingPost"
                style="@style/ButtonFullWidthLightBlue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/label_postlisting_post" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>