<?xml version="1.0" encoding="utf-8"?>
<!-- layout to reset password -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp" >

    <TextView
        android:id="@+id/txtActLoginNewPassword"
        style="?TextViewGrayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/g_msg_password_reset_validation" />

    <!-- New Password -->
    <EditText
        android:id="@+id/edtActLoginNewPassword"
        style="?EditTextGrayBorder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_below="@id/txtActLoginNewPassword"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/g_hint_new_password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="5dp" />
	<!-- Confirm Password -->
    <EditText
        android:id="@+id/edtActLoginConfirmPassword"
        style="?EditTextGrayBorder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_below="@id/edtActLoginNewPassword"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/g_hint_conf_password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="5dp" />

    <Button
        android:id="@+id/btnActLoginResetPasswd"
        style="?ButtonRoundCorner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_below="@id/edtActLoginConfirmPassword"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/g_label_reset_password" />

</RelativeLayout>