<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <!-- Title -->

        <EditText
            android:id="@+id/edtActPostListingTitle"
            style="?EditTextGrayBorder"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/label_postlisting_listing_title"
            android:inputType="text" />

        <!-- Description -->

        <EditText
            android:id="@+id/edtActPostListingDescription"
            style="?EditTextGrayBorder"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="top"
            android:hint="@string/label_postlisting_description"
            android:inputType="textMultiLine" />

        <!-- Category Details -->

        <Spinner
            android:id="@+id/spinActPostListingCategory"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp" />

        <!-- Price -->

        <EditText
            android:id="@+id/edtActPostListingPriceValue"
            style="?EditTextGrayBorder"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/g_hint_postlisting_current_value"
            android:inputType="numberDecimal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:weightSum="100" >

            <EditText
                android:id="@+id/edtActPostListingZipCode"
                style="?EditTextGrayBorder"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_weight="35"
                android:maxLength="6"
                android:hint="@string/label_zip"
                android:inputType="number" />

            <TextView
                android:id="@+id/txtActPostListingCity"
                style="?TextViewGrayText"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="65"
                android:gravity="center_vertical"
                android:text="New York, NY" />
        </LinearLayout>

        <com.venefica.module.map.TapControlledMapView
            android:id="@+id/mapViewActPostListing"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:apiKey="@string/google_map_api_key"
            android:clickable="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:weightSum="100" >

            <CheckBox
                android:id="@+id/chkActPostListingFreeShipping"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_weight="50"
                android:checked="true"
                android:text="@string/g_label_free_shipping"
                android:textColor="@color/light_gray"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/chkActPostListingPickUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_weight="50"
                android:checked="true"
                android:text="@string/g_label_pick_up"
                android:textColor="@color/light_gray"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnActPostListingNextToPreview"
            style="?ButtonRoundCorner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/g_label_postlisting_next" />
    </LinearLayout>

</ScrollView>